--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 APP_PORT = 3000
-POSTGRES_HOST = database
+POSTGRES_HOST = localhost
 POSTGRES_DATABASE = relics_project
-POSTGRES_USER = postgres
+POSTGRES_USERNAME = postgres
 POSTGRES_PASSWORD = root
 POSTGRES_PORT = 5432
+POSTGRES_SYNC = true        
