--- a/example.env
+++ b/example.env
@@ -1,12 +1,6 @@
 APP_PORT = 
 POSTGRES_HOST = 
-POSTGRES_DATABASE = 
-<<<<<<< HEAD
-POSTGRES_USER = 
+POSTGRES_DB = 
+POSTGRES_USERNAME = 
 POSTGRES_PASSWORD = 
-POSTGRES_PORT = 
-=======
-POSTGRES_USER =
-POSTGRES_PASSWORD = 
-POSTGRES_PORT =
->>>>>>> aac317680f251e63f14a9fd01f0be194eb494ca6
+POSTGRES_PORT =    
