--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ volumes:
   
 services:
   postgres:
-    container_name: database
+    container_name: $POSTGRES_DB
     image: postgres:latest
     env_file:
       - .env
@@ -16,5 +16,5 @@ services:
     volumes:
       - postgres:/data/postgres
     ports:
-      - "5432:5432"
+      - "$POSTGRES_PORT:$POSTGRES_PORT"
     restart: unless-stopped
