--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,27 @@
 {
   "compilerOptions": {
-    "target": "ESNext", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    "experimentalDecorators": true, /* Enable experimental support for TC39 stage 2 draft decorators. */
-    "emitDecoratorMetadata": true, /* Emit design-type metadata for decorated declarations in source files. */
-    "useDefineForClassFields": true, /* Emit ECMAScript-standard-compliant class fields. */
-    "module": "NodeNext", /* Specify what module code is generated. */
-    "moduleResolution": "NodeNext", /* Specify how TypeScript looks up a file from a given module specifier. */
-    "resolveJsonModule": true, /* Enable importing .json files. */
-    "removeComments": true, /* Disable emitting comments. */
-    "allowSyntheticDefaultImports": true, /* Allow 'import x from y' when a module doesn't have a default export. */
-    "esModuleInterop": true, /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
-    "forceConsistentCasingInFileNames": true, /* Ensure that casing is correct in imports. */
-    "strict": true, /* Enable all strict type-checking options. */
-    "noImplicitAny": true, /* Enable error reporting for expressions and declarations with an implied 'any' type. */
+    "target": "ESNext",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "useDefineForClassFields": true,
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "resolveJsonModule": true,
+    "removeComments": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "noImplicitAny": true,
     "noImplicitOverride": true,
-    "strictNullChecks": true, /* When type checking, take into account 'null' and 'undefined'. */
-    "strictFunctionTypes": true, /* When assigning functions, check to ensure parameters and the return values are subtype-compatible. */
-    "strictBindCallApply": true, /* Check that the arguments for 'bind', 'call', and 'apply' methods match the original function. */
-    "strictPropertyInitialization": false, /* Check for class properties that are declared but not set in the constructor. */
-    "noImplicitThis": true, /* Enable error reporting when 'this' is given the type 'any'. */
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": false,
+    "noImplicitThis": true,
     "noUncheckedIndexedAccess": true,
-    "alwaysStrict": true, /* Ensure 'use strict' is always emitted. */
-    "skipLibCheck": true, /* Skip type checking all .d.ts files. */
+    "alwaysStrict": true,
+    "skipLibCheck": true,
     "declaration": false,
     "emitDeclarationOnly": false,
     "isolatedModules": true,
@@ -39,8 +39,15 @@
       ],
       "#modules/*": [
         "./src/modules/*"
+      ],
+      "relic-project-lib/relic-project-lib": [
+        "libs/relic-project-lib/src"
+      ],
+      "relic-project-lib/relic-project-lib/*": [
+        "libs/relic-project-lib/src/*"
       ]
-    }
+    },
+    "baseUrl": "./"
   },
   "include": [
     "src/**/*"
