--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,16 @@ volumes:
   
 services:
   postgres:
-    container_name: $POSTGRES_DB
+    container_name: ${POSTGRES_DB}
     image: postgres:latest
     env_file:
       - .env
     environment:
-      - POSTGRES_USER=$POSTGRES_USER
-      - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
-      - POSTGRES_DB=$POSTGRES_DB
+      - POSTGRES_USER=${POSTGRES_USERNAME}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
-      - postgres:/data/postgres
+      - pg_data:/data/postgres
     ports:
-      - "$POSTGRES_PORT:$POSTGRES_PORT"
+      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
     restart: unless-stopped
