--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "dev": "nodemon dist/index.js",
+    "start:dev": "tsc --watch && nodemon dist/index.js",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -32,6 +33,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
+    "nodemon": "^3.0.1",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -83,5 +85,8 @@
     "moduleNameMapper": {
       "^relic-project-lib/relic-project-lib(|/.*)$": "<rootDir>/libs/relic-project-lib/src/$1"
     }
+  },
+  "imports": {
+    "@src/*": "src/*"
   }
 }
