--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,18 +40,15 @@
 		"isolatedModules": true,
         "verbatimModuleSyntax": true,
         "allowSyntheticDefaultImports": true, /* Allow 'import x from y' when a module doesn't have a default export. */
-		"forceConsistentCasingInFileNames": true, /* Ensure that casing is correct in imports. */
-		
-        "paths": {
-			"#src/*": [
-				"./src/*"
-			]
-		}
+		"forceConsistentCasingInFileNames": true, /* Ensure that casing is correct in imports. */ 
+	},
+	"paths": {
+		"@src/*": ["src/*"]
 	},
 	"include": [
 		"src"
 	],
 	"exclude": [
-		"node_modules"
+		"node_modules",
 	]
 }
