Change the files paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compilerOptions": {
         "baseUrl": ".",
+		"rootDir": "./src",
 		"target": "ESNext", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
 		"module": "NodeNext", /* Specify what module code is generated. */
 		"moduleResolution": "NodeNext", /* Specify how TypeScript looks up a file from a given module specifier. */
@@ -40,10 +41,15 @@
 		"isolatedModules": true,
         "verbatimModuleSyntax": true,
         "allowSyntheticDefaultImports": true, /* Allow 'import x from y' when a module doesn't have a default export. */
-		"forceConsistentCasingInFileNames": true, /* Ensure that casing is correct in imports. */ 
-	},
-	"paths": {
-		"@src/*": ["src/*"]
+		"forceConsistentCasingInFileNames": true, /* Ensure that casing is correct in imports. */
+		"paths": {
+			"@src/*": ["./src/*"],
+			"@database": ["./src/database/index.js"],
+			"@announcements":["./src/announcements/index.js"],
+			"@relics":["./src/relics/index.js"],
+			"@squads": ["./src/squads/index.js"],
+			"@users": ["./src/users/index.js"]
+		}
 	},
 	"include": [
 		"src"
