--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "dev": "nodemon dist/index.js",
-    "start:dev": "tsc --watch && nodemon dist/index.js",
+    "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -33,13 +33,13 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
-    "nodemon": "^3.0.1",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
+    "nodemon": "^3.0.1",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
@@ -87,6 +87,11 @@
     }
   },
   "imports": {
-    "@src/*": "src/*"
+    "@src": "./dist/*",
+    "@annoucements": "./dist/annoucements/index.js",
+    "@database": "./dist/database/index.js",
+    "@relics": "./dist/relics/index.js",
+    "@squads": "./dist/squads/index.js",
+    "@users": "./dist/users/index.js"
   }
 }
