--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+#environments
+.env
+.env.local
+.env.development
